# PL_2020_CUDA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: kirsch.hpp
include/kirsch/: cpu.hpp  gpu.cuh  helpers.inl
src/kirsch/: cpu.cpp  gpu.cu
